--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -111,11 +111,11 @@ main {
 /*/////////////////////////////// RESPONSIVE TABLET //////////////////////////////////////*/
 
 @media (min-width: 768px) {
-  @import "tablet";
+  @import "sass/tablet";
 }
 
 /*/////////////////////////////// RESPONSIVE DESKTOP /////////////////////////////////////*/
 
 @media (min-width: 1024px) {
-  @import "desktop";
+  @import "sass/desktop";
 }
