--- a/assets/styles/sass/_colors.scss
+++ b/assets/styles/sass/_colors.scss
@@ -1,6 +1,6 @@
 // BODY //
 
-// $text-color: ;
+$text-color: white;
 // $primary-color: ;
 // $secondary-color: ;
 
@@ -8,7 +8,10 @@
 $error-color: rgb(196, 51, 51);
 $valid-color: rgb(39, 187, 39);
 // HEADER //
-
+$navbar-bcg-color: #0000004f;
+$icon-color: white;
+$menu-burger-bcg-color: #29013d;
 //  MAIN //
+$form-bcg-color: #7600af;
 
 // FOOTER //
