--- a/assets/styles/sass/_desktop.scss
+++ b/assets/styles/sass/_desktop.scss
@@ -46,5 +46,7 @@ header {
 }
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
-
+main {
+  margin-top: 120px;
+}
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
