--- a/assets/styles/sass/_template.scss
+++ b/assets/styles/sass/_template.scss
@@ -1,5 +1,63 @@
-@mixin template-btn() {
+@mixin template-btn {
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 3px 5px;
+  border-radius: 5px;
+  color: black;
+  a {
+    color: black;
+  }
 }
 
-@mixin template-form() {
+@mixin template-form-login {
+  form {
+    padding: 20px 0;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $form-bcg-color;
+    h1,
+    label {
+      color: $text-color;
+    }
+    label {
+      margin-top: 20px;
+    }
+    button {
+      @include template-btn;
+    }
+  }
+}
+
+@mixin template-form {
+  h1 {
+    color: $text-color;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    background-color: $form-bcg-color;
+    padding: 20px 0;
+    border-radius: 5px;
+    align-items: center;
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      label {
+        margin-top: 20px;
+        color: $text-color;
+      }
+      input {
+        width: 199px;
+      }
+    }
+    button {
+      @include template-btn;
+    }
+  }
 }
