--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,9 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta
-		name="description" content="forum for SIMPLON'school"/>
-		{# <link rel="icon" href="{{ asset('imgs/favicon.ico')}}"> #}
+		<meta name="description" content="forum for SIMPLON'school"/>
+		<link rel="icon" href="{{ asset('imgs/logo.ico')}}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
