--- a/assets/styles/sass/_desktop.scss
+++ b/assets/styles/sass/_desktop.scss
@@ -48,5 +48,17 @@ header {
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
 main {
   margin-top: 120px;
+  .login-container,
+  .register-container {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .items-container > .items-cards-container {
+    grid-template-columns: repeat(3, 190px);
+    column-gap: 100px;
+  }
 }
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
