--- a/assets/styles/sass/_tablet.scss
+++ b/assets/styles/sass/_tablet.scss
@@ -1,5 +1,20 @@
 /*//////////////////////////////////// HEADER ////////////////////////////////////////////*/
 
 /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
+main {
+  margin-top: 120px;
+  .login-container,
+  .register-container {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .items-container > .items-cards-container {
+    grid-template-columns: repeat(2, 190px);
+    column-gap: 100px;
+  }
+}
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
