--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,8 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!
+{% block title %}Home
 {% endblock %}
 
 {% block body %}
-	<main></main>
+	<main>
+		<div class="items-container">
+			<div class="items-cards-container">
+				{% for item in pagination %}
+					<a href="">
+						<div class="item-card">
+							<h2>{{ item.name}}</h2>
+							{# <img src="{{ vich_uploader_asset(item, 'imageFile') }}" alt="picture of {{ item.name }}"> #}
+							<p>stock :
+								{{ item.stock }}</p>
+							<p>price :
+								{{ item.price }}€</p>
+							<p>status :
+								{{ item.status.status }}
+							</p>
+							<p>category :
+								{{ item.category.category }}</p>
+							<p>subcategory :
+								{{ item.subcategory.subcategory }}</p>
+						</div>
+					</a>
+				{% endfor %}
+			</div>
+			<div class="pagination-items">
+				{{ knp_pagination_render(pagination) }}
+			</div>
+		</div>
+	</main>
 {% endblock %}
