--- a/assets/styles/sass/_colors.scss
+++ b/assets/styles/sass/_colors.scss
@@ -1,8 +1,6 @@
 // BODY //
 
 $text-color: white;
-// $primary-color: ;
-// $secondary-color: ;
 
 // ALERT & VALID //
 $error-color: rgb(196, 51, 51);
@@ -13,5 +11,6 @@ $icon-color: white;
 $menu-burger-bcg-color: #29013d;
 //  MAIN //
 $form-bcg-color: #7600af;
+$card-bcg-color: #2c2c89;
 
 // FOOTER //
