--- a/assets/styles/sass/_template.scss
+++ b/assets/styles/sass/_template.scss
@@ -61,3 +61,13 @@
     }
   }
 }
+
+@mixin template-card {
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: $card-bcg-color;
+  p {
+    text-transform: capitalize;
+  }
+}
