--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,31 +5,6 @@
 
 {% block body %}
 	<main>
-		<div class="items-container">
-			<div class="items-cards-container">
-				{% for item in pagination %}
-					<a href="">
-						<div class="item-card">
-							<h2>{{ item.name}}</h2>
-							{# <img src="{{ vich_uploader_asset(item, 'imageFile') }}" alt="picture of {{ item.name }}"> #}
-							<p>stock :
-								{{ item.stock }}</p>
-							<p>price :
-								{{ item.price }}€</p>
-							<p>status :
-								{{ item.status.status }}
-							</p>
-							<p>category :
-								{{ item.category.category }}</p>
-							<p>subcategory :
-								{{ item.subcategory.subcategory }}</p>
-						</div>
-					</a>
-				{% endfor %}
-			</div>
-			<div class="pagination-items">
-				{{ knp_pagination_render(pagination) }}
-			</div>
-		</div>
+		<div class="home-container"></div>
 	</main>
 {% endblock %}
