--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -21,7 +21,7 @@
 				<a href="{{path('app_home')}}">home</a>
 			</li>
 			<li>
-				<a href="">store</a>
+				<a href="{{ path('app_items')}}">store</a>
 			</li>
 		</ul>
 		<div class="icons-container">
@@ -36,7 +36,7 @@
 			<i class="fa-solid fa-xmark fa-2xl" id="close-menu-burger"></i>
 			<ul>
 				<li><a class=""href="{{ path('app_home') }}">home</a></li>
-				<li><a href="">store</a></li>
+				<li><a class=""href="{{ path('app_items')}}">store</a></li>
 			</ul>
 		</div>
 	</div>
