add cart and profil

--- a/assets/styles/sass/_colors.scss
+++ b/assets/styles/sass/_colors.scss
@@ -6,7 +6,7 @@ $text-color: white;
 $error-color: rgb(196, 51, 51);
 $valid-color: rgb(39, 187, 39);
 // HEADER //
-$navbar-bcg-color: #0000004f;
+$navbar-bcg-color: #450456;
 $icon-color: white;
 $menu-burger-bcg-color: #29013d;
 //  MAIN //
