--- a/assets/styles/sass/_desktop.scss
+++ b/assets/styles/sass/_desktop.scss
@@ -12,7 +12,7 @@ header {
     padding: 20px 30px;
     height: 120px;
     justify-content: space-between;
-    background-color: #0000004f;
+    background-color: $navbar-bcg-color;
     img {
       height: 60px;
       cursor: pointer;
