--- a/assets/styles/sass/_template.scss
+++ b/assets/styles/sass/_template.scss
@@ -66,8 +66,10 @@
   padding: 10px;
   border: 2px solid black;
   border-radius: 5px;
-  background-color: $card-bcg-color;
-  p {
+  background-color: $form-bcg-color;
+  p,
+  h2 {
+    color: $text-color;
     text-transform: capitalize;
   }
 }
