--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -6,7 +6,9 @@
 		</a>
 		<div class="icons-container">
 			{% if app.user %}
-				<i class="fa-solid fa-cart-arrow-down fa-xl"></i>
+				<a href="{{ path('user-cart', {'id': app.user.id})}}">
+					<i class="fa-solid fa-cart-arrow-down fa-xl"></i>
+				</a>
 			{% endif %}
 			<i class="fa-solid fa-user fa-xl"></i>
 		</div>
@@ -26,7 +28,9 @@
 		</ul>
 		<div class="icons-container">
 			{% if app.user %}
-				<i class="fa-solid fa-cart-arrow-down fa-2xl"></i>
+				<a href="{{ path('user-cart', {'id': app.user.id})}}">
+					<i class="fa-solid fa-cart-arrow-down fa-2xl"></i>
+				</a>
 			{% endif %}
 			<i class="fa-solid fa-user fa-2xl"></i>
 		</div>
@@ -49,7 +53,7 @@
 			{% endif %}
 			{% if app.user %}
 				<li>
-					<a href="">profil</a>
+					<a href="{{ path('user-profil', {'id': app.user.id})}}">profil</a>
 				</li>
 				<li>
 					<a href="{{path("app_logout")}}">logout</a>
