--- a/templates/items/index.html.twig
+++ b/templates/items/index.html.twig
@@ -23,7 +23,7 @@
 			</div>
 			<div class="items-cards-container" id="items-cards-container">
 				{% for item in pagination %}
-					<a href="" class="link-card">
+					<a href="{{ path('item-detail', {'id': item.id} )}}" class="link-card">
 						<div class="item-card">
 							<h2>{{ item.name}}</h2>
 							{# <img src="{{ vich_uploader_asset(item, 'imageFile') }}" alt="picture of {{ item.name }}"> #}
@@ -42,9 +42,11 @@
 					</a>
 				{% endfor %}
 			</div>
-			<div class="pagination-items" id="pagination-items">
-				{{ knp_pagination_render(pagination) }}
-			</div>
+			{% if mobile != true %}
+				<div class="pagination-items" id="pagination-items">
+					{{ knp_pagination_render(pagination) }}
+				</div>
+			{% endif %}
 		</div>
 	</main>
 {% endblock %}
