add items on cart with stock -1 and delete items with stock + 1

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -279,6 +279,21 @@ main {
       @include template-card;
     }
   }
+
+  .cart-container {
+    h2 {
+      color: $text-color;
+      text-align: center;
+      padding: 20px 0;
+    }
+    .cards-cart-container {
+      .card-cart {
+        width: 70%;
+        margin: auto;
+        @include template-card;
+      }
+    }
+  }
 }
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
