--- a/assets/styles/sass/_template.scss
+++ b/assets/styles/sass/_template.scss
@@ -48,12 +48,20 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      ul > li {
+        color: $text-color;
+        border-radius: 5px;
+        background-color: $error-color;
+        text-align: center;
+        padding: 3px 5px;
+        margin: 10px 20px;
+      }
       label {
         margin-top: 20px;
         color: $text-color;
       }
       input {
-        width: 199px;
+        width: 200px;
       }
     }
     button {
@@ -71,5 +79,8 @@
   h2 {
     color: $text-color;
     text-transform: capitalize;
+  }
+  a > button {
+    @include template-btn;
   }
 }
