--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -55,6 +55,11 @@
 				<li>
 					<a href="{{ path('user-profil', {'id': app.user.id})}}">profil</a>
 				</li>
+				{% if is_granted('ROLE_ADMIN') %}
+					<li>
+						<a href="{{ path('admin') }}">admin</a>
+					</li>
+				{% endif %}
 				<li>
 					<a href="{{path("app_logout")}}">logout</a>
 				</li>
