config easyAdmin OK + add formType for user and item

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,8 @@
 					{{ message }}
 				</div>
 			{% endfor %}
+			<h1>welcome to the retrogaming shop</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quidem officia aliquam velit atque nesciunt voluptatum a harum sapiente fugit. Voluptate nam placeat dolores repellendus! Molestias, delectus neque! Porro odio, quisquam quasi minima temporibus nesciunt, maiores quidem in aperiam, illo maxime pariatur excepturi eaque sint. Temporibus iure quibusdam dolorum libero reiciendis officia dolore, ad id dicta quasi nostrum necessitatibus iste eius ab sed, incidunt magni recusandae odit blanditiis autem quos vero maiores et! Tenetur, eaque mollitia incidunt illo animi labore ratione possimus maiores itaque odit dolorem, expedita unde atque harum esse ipsa quibusdam autem accusamus porro placeat illum eveniet. Rem nam quo ipsa. Cupiditate, expedita cumque ad rem necessitatibus sit porro! Placeat ea, at, doloremque animi repellendus sit dolorem illo optio tempora necessitatibus ipsam fuga harum omnis voluptates maxime iusto error accusamus voluptate architecto aliquid, eum corrupti! Numquam, amet iure beatae corporis neque debitis facilis sed, quidem vero aperiam architecto iste dolorem provident perspiciatis odit eveniet nam cumque animi fuga deserunt voluptatum voluptas quaerat? Nihil veniam laudantium, pariatur laborum praesentium odit iste animi eum consequatur at atque repudiandae rem voluptas tempora possimus beatae. Vitae, esse. Perferendis odit animi cumque, dignissimos ducimus mollitia! Deleniti, quo. Illo quos saepe aliquam ea architecto?</p>
 		</div>
 	</main>
 {% endblock %}
