--- a/assets/styles/sass/_template.scss
+++ b/assets/styles/sass/_template.scss
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: column;
     background-color: $form-bcg-color;
-    padding: 20px 0;
+    padding: 20px;
     border-radius: 5px;
     align-items: center;
     div {
